--- a/SR-gen1/src/main/resources/application.properties
+++ b/SR-gen1/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8081
-service.url=http://host.docker.internal:8082
 spring.application.name=SR1
 
 spring.zipkin.enabled=false
+
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+sr2.service=SR2
