add eureka discovery

--- a/SR-gen3/src/main/resources/application.properties
+++ b/SR-gen3/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 
 server.port=8083
-service.url=http://host.docker.internal:8084
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
+sr4.service=SR4
+
 spring.application.name=SR3
 spring.zipkin.enabled=false
