--- a/SR-gen4/src/main/resources/application.properties
+++ b/SR-gen4/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8084
 spring.application.name=SR4
 spring.zipkin.enabled=false
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
